# CPPy-Bird

./: CMakeLists.txt  README.md
src/: bird.cpp  bird.h  controller.cpp  controller.h  game.cpp  game.h  main.cpp  pipe.cpp  pipe.h  renderer.cpp  renderer.h
